# Machine-Learning-Group-1

.old/ccfraudtest/: .gitignore  download-data.sh
.old/loltest/: download-data.sh  pyproject.toml
ccfraudtest/: main.py  pyproject.toml
credit_card_fraud/: feature_importances.csv  main.py
fakevsrealnews/: english_fake_news_2212.csv  main.py
loltest/: main.py
project1/: .gitignore  cart.pkl  cart.py  constants.py  data.py  gb-es.pkl  gb.py  main.py  pyproject.toml  random_forest.py  state.py  xgboost_model.py
project1/models/123/: cart.pkl  gb.adasyn.pkl  gb.es.pkl
project2/: resize_dataset_recursive.py  test.py
