[project]
name = "iti41720-machine-learning-and-deep-learning-part-1"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imblearn>=0.0",
    "joblib>=1.5.2",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
]

[tool.ruff]
line-length = 125
